--- a/css/style.css
+++ b/css/style.css
@@ -4788,19 +4788,18 @@ section .section-title span {
     top: 0px;
     opacity: 1;
   }
-  20%, 80% {
-    color: #29323d;
-  }
   45% {
     top: -20px;
     opacity: 0;
-    color: #dc143c;
     color: #29323d;
   }
   46% {
     top: 20px;
     opacity: 0;
     color: #dc143c;
+    color: #29323d;
+  }
+  65% {
     color: #29323d;
   }
 }
