--- a/css/style.css
+++ b/css/style.css
@@ -430,7 +430,7 @@ hamburger
 .bottom-nav .link-item a i {
   font-size: 1.2rem;
   font-weight: 700;
-  color: #b3bfcb;
+  color: #a4b3c1;
   transition: 0.25s;
 }
 @media (min-width: 820px) {
@@ -451,7 +451,7 @@ hamburger
     transform: scale(1.05);
   }
   .bottom-nav .link-item:hover a {
-    border: 1px solid #b3bfcb;
+    border: 1px solid #a4b3c1;
   }
   .bottom-nav .link-item:hover a:hover {
     border: none;
@@ -539,7 +539,7 @@ hamburger
   display: grid;
   place-items: center;
   isolation: isolate;
-  color: #b3bfcb;
+  color: #a4b3c1;
   text-transform: capitalize;
   animation: spinner-out 1s ease 4s forwards;
 }
@@ -735,7 +735,7 @@ hamburger
   background: linear-gradient(0deg, #deb86e, #ead2a1);
   background: linear-gradient(#f4f4f4, #fff);
   background: inherit;
-  color: #b3bfcb;
+  color: #a4b3c1;
   border-radius: 0;
   transition: 0.2s;
 }
@@ -802,7 +802,7 @@ hamburger
     transition: 0.3s ease letter-spacing;
   }
   .header .navbar #nav .nav-list .links-container ul li a.active {
-    color: #b3bfcb;
+    color: #a4b3c1;
   }
   .header .navbar #nav .nav-list .links-container ul li i {
     width: 2.5rem;
@@ -833,7 +833,7 @@ hamburger
     margin-right: 0.25rem;
     padding-right: 0.25rem;
     width: 1.5rem;
-    border-right: 1px solid #b3bfcb;
+    border-right: 1px solid #a4b3c1;
   }
   .header .navbar #nav .nav-list .links-container.active {
     left: 0;
@@ -891,7 +891,7 @@ hamburger
   }
   .header .navbar #nav .nav-list .links-container.active .contact-links a:hover i {
     transition: 0.25s;
-    color: #b3bfcb;
+    color: #a4b3c1;
   }
 }
 .header .navbar #nav .nav-list .links-container .nav-logo {
@@ -943,7 +943,7 @@ hamburger
   border-radius: 5px;
 }
 .header .navbar #nav .nav-list ul li:hover a {
-  color: #b3bfcb;
+  color: #a4b3c1;
   transition: 0.25s;
 }
 .header .navbar #nav .nav-list ul li:hover a::after {
@@ -951,7 +951,7 @@ hamburger
   letter-spacing: initial;
 }
 .header .navbar #nav .nav-list ul li:hover a i {
-  color: #b3bfcb;
+  color: #a4b3c1;
 }
 @media (min-width: 820px) {
   .header .navbar #nav .nav-list {
@@ -990,7 +990,7 @@ hamburger
     transform: translateX(-50%);
     width: 0%;
     height: 2px;
-    background-color: #b3bfcb;
+    background-color: #a4b3c1;
     transition: 0.3s ease;
   }
   .header .navbar #nav .nav-list ul li:hover::before {
@@ -1011,7 +1011,7 @@ hamburger
     display: none;
   }
   .header .navbar #nav .nav-list ul li a.active {
-    color: #b3bfcb;
+    color: #a4b3c1;
     transform: scale(1.15);
   }
   .header .navbar #nav .nav-list ul li a.active::before {
@@ -1182,7 +1182,7 @@ hamburger
   font-size: 0.95rem;
   font-size: clamp(.95rem, 2vw, 1.125rem);
   font-weight: 400;
-  color: #b3bfcb;
+  color: #a4b3c1;
 }
 .banner .hero .hero-content .hero-title .hero-title-header a {
   color: inherit;
@@ -1240,7 +1240,7 @@ hamburger
   font-size: 1.25rem;
   font-size: clamp(1.25rem, 2.25vw, 1.5rem);
   position: relative;
-  color: #b3bfcb;
+  color: #a4b3c1;
   margin-top: 0.5rem;
   font-family: "Montserrat", sans-serif;
 }
@@ -1404,7 +1404,7 @@ hamburger
   }
 }
 .banner .hero .hero-index-content span {
-  color: #b3bfcb;
+  color: #a4b3c1;
 }
 .banner .hero .hero-index-content .content-title {
   margin-bottom: 25vh;
@@ -1798,7 +1798,7 @@ hamburger
   position: absolute;
   left: -0.5em;
   bottom: 1em;
-  background-image: radial-gradient(circle at top, #b3bfcb, 50%, #000);
+  background-image: radial-gradient(circle at top, #a4b3c1, 50%, #000);
   animation: scene 20s infinite linear reverse;
 }
 @keyframes ball-bounce {
@@ -1862,7 +1862,7 @@ hamburger
   font-size: 0.25em;
   text-transform: uppercase;
   transition: 0.25s;
-  color: #b3bfcb;
+  color: #a4b3c1;
   pointer-events: none;
 }
 .cube .left:hover,
@@ -2212,7 +2212,7 @@ hamburger
   color: #f4f4f4;
 }
 .skills-section .skills-content .skills-page-container .skills-bottom .skills-item ul li::marker {
-  color: #b3bfcb;
+  color: #a4b3c1;
   color: #fff4;
 }
 .skills-section .skills-content .skills-page-container .skills-bottom .skills-item::after {
@@ -2436,7 +2436,7 @@ hamburger
 .skill-section {
   background: #15191e;
   color: #f4f4f4;
-  border-bottom: 0.125rem solid #b3bfcb;
+  border-bottom: 0.125rem solid #a4b3c1;
 }
 .skill-section:last-of-type {
   border-bottom: none;
@@ -2494,7 +2494,7 @@ hamburger
   padding-bottom: 0.25rem;
 }
 .skill-section .skill-section-title ul li::marker {
-  color: #b3bfcb;
+  color: #a4b3c1;
 }
 .skill-section .skill-section-title .btn {
   margin-top: 1rem;
@@ -2859,7 +2859,7 @@ hamburger
 }
 .contact .contact-items .contact-item .title h3 {
   color: #f4f4f4;
-  color: #b3bfcb;
+  color: #a4b3c1;
   font-size: 0.85rem;
   font-weight: 600;
   position: relative;
@@ -3090,7 +3090,7 @@ hamburger
   font-weight: 500;
   margin: 0.5rem 0;
   text-transform: capitalize;
-  color: #b3bfcb;
+  color: #a4b3c1;
   transition: 0.3s;
 }
 @media (min-width: 768px) {
@@ -3188,7 +3188,7 @@ hamburger
 }
 #projects .projects .all-projects .project-item .tech-list ul li {
   font-size: 0.8em;
-  color: #b3bfcb;
+  color: #a4b3c1;
   list-style: none;
   padding: 0.4em 0.3em;
   margin-right: 0.1em;
@@ -3345,7 +3345,7 @@ hamburger
   transition: 0.25s;
 }
 .work .work-container .item .item-header .item-meta-data li:hover {
-  color: #b3bfcb;
+  color: #a4b3c1;
 }
 .work .work-container .item .item-header .item-description {
   margin: 1rem 0;
@@ -3684,7 +3684,7 @@ hamburger
   border-radius: 0.25rem;
 }
 .work .work-items .work-item .scroll-snap::-webkit-scrollbar-thumb {
-  background-color: #b3bfcb;
+  background-color: #a4b3c1;
   border-radius: 0.25rem;
 }
 .work .work-items .work-item .scroll-snap::-webkit-scrollbar-track {
@@ -3871,7 +3871,7 @@ hamburger
   font-size: 0.6em;
   font-weight: 600;
   text-transform: capitalize;
-  color: #b3bfcb;
+  color: #a4b3c1;
   background-color: #dc143c;
   border-radius: 10px;
   transition: 0.5s ease;
@@ -4205,7 +4205,7 @@ hamburger
   right: 1rem;
   top: 1rem;
   font-size: 4rem;
-  color: #b3bfcb;
+  color: #a4b3c1;
   opacity: 0.1;
   transition: 0.25s;
 }
@@ -4229,7 +4229,7 @@ hamburger
   margin-bottom: 0.25rem;
   text-transform: capitalize;
   color: #f4f4f4;
-  color: #b3bfcb;
+  color: #a4b3c1;
   font-weight: 400;
   font-family: "Kanit", sans-serif;
   transition: 1s ease;
@@ -4437,7 +4437,7 @@ hamburger
   margin-bottom: 1rem;
 }
 #footer .footer .footer-bottom .footer-item .date {
-  color: #b3bfcb;
+  color: #a4b3c1;
 }
 #footer .footer .footer-bottom .footer-item p {
   color: #f4f4f4;
@@ -4452,7 +4452,7 @@ hamburger
 }
 #footer .footer .footer-bottom .footer-item .footer-list li i {
   width: 1.5rem;
-  color: #b3bfcb;
+  color: #a4b3c1;
   transition: 0.25s;
 }
 #footer .footer .footer-bottom .footer-item .footer-list li a {
@@ -4460,7 +4460,7 @@ hamburger
   cursor: pointer;
 }
 #footer .footer .footer-bottom .footer-item .footer-list li:hover a {
-  color: #b3bfcb;
+  color: #a4b3c1;
 }
 #footer .footer .footer-bottom .footer-item .footer-list li:hover i {
   color: #f4f4f4;
@@ -4549,7 +4549,7 @@ hamburger
 }
 #footer .footer .brand h2 {
   font-family: "Ubuntu", sans-serif;
-  color: #b3bfcb;
+  color: #a4b3c1;
   font-weight: 500;
   font-size: 1.2em;
   letter-spacing: 0.1em;
@@ -4893,7 +4893,7 @@ section .section-title.active-item span {
   display: block;
 }
 #thanks .home-link i {
-  color: #b3bfcb;
+  color: #a4b3c1;
   font-size: 1rem;
   margin-right: 0.5rem;
 }
