--- a/sass/_utilities.scss
+++ b/sass/_utilities.scss
@@ -45,8 +45,7 @@ hamburger
     // end of hamburger box shadow
     // pulse 
     &.hamburger:before {
-        border: 1px solid $span-gold;
-        border: 1px solid $light-span;
+        border: 1px solid $brand;
         opacity: 0;
         animation: ham-pulse 2.5s ease infinite;
         @keyframes ham-pulse {
