--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -26,7 +26,7 @@ $border-radius-lg: 1rem;
 $border-radius-xlg: 50%;
 // SPAN AND BRAND
 
-$brand: #a4b3c1;
+$brand: hsl(209, 20%, 75%);
 $brand-border: hsla(210, 19%, 75%, .5);
 
 $span-crimson: #dc143c;
