--- a/sass/_contact.scss
+++ b/sass/_contact.scss
@@ -7,7 +7,7 @@
         width: 100%;
         position: relative;
         transform-style: preserve-3d;
-        background: #f4f4f4;
+        background: #fafafa;
         // border: 2px solid blue;
         padding: 10vh 5vw;
         @include lg {
@@ -17,7 +17,7 @@
         .contact-header {
             width: 100%;
             height: auto;
-            background: #f4f4f4;
+            background: #fafafa;
             z-index: 10;
         }
         // end of section-title
@@ -26,7 +26,7 @@
             width: 100%;
             display: flex;
             flex-direction: column;
-            gap: 5vh;
+            gap: 10vh;
             // border: 2px solid blue;
             // padding: 1rem;
             @include xlg {
