--- a/css/style.css
+++ b/css/style.css
@@ -752,7 +752,7 @@ hamburger
   }
   .header .navbar #nav .nav-list .links-container ul {
     margin: 1rem 5vw 1rem;
-    background: #1f252d;
+    background: #29323d;
     padding: 0.5rem 0;
     height: max-content;
     display: flex;
