--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -186,7 +186,7 @@
 
                         ul {
                             margin: 1rem 5vw 1rem;
-                            background: $overlay-blue-darker;
+                            background: $overlay-blue-dark;
                             padding: .5rem 0;
                             height: max-content;
                             display: flex;
