skills btn position

--- a/sass/_skills.scss
+++ b/sass/_skills.scss
@@ -818,8 +818,8 @@
             width: clamp(10rem, 40vw, 12rem);
             font-weight: 600;
 
-            position: sticky;
-            top: 50vh;
+            // position: sticky;
+            // top: 50vh;
 
         }
 
