--- a/sass/_work.scss
+++ b/sass/_work.scss
@@ -267,7 +267,7 @@
                     // height: 50vh;
                     overflow: hidden;
                     width: 100%;
-                    // border: 2px solid $overlay-blue-darkest;
+                    // border: 2px solid #0001;
                     // border-radius: .25rem;
                     // margin: 0 auto;
                     img {
@@ -277,6 +277,7 @@
                         transition: .5s;
                         // border: 2px solid pink;
                         @include lg {
+                            border: 1px solid #0002;
                             border-radius: .25rem;
                         }
                     }
