--- a/css/style.css
+++ b/css/style.css
@@ -35,7 +35,6 @@ hamburger
   font-size: 10px;
   height: 3em;
   width: 3em;
-  margin: 0.5rem auto 0.5rem;
   display: inline-block;
   border-radius: 50%;
   position: relative;
@@ -633,7 +632,6 @@ hamburger
   left: 0;
   top: 0;
   width: 100%;
-  height: 8vh;
   isolation: isolate;
 }
 .header::after {
@@ -646,11 +644,6 @@ hamburger
   box-shadow: 0rem 0.5rem 1rem transparent;
   z-index: -1;
   transition: background 0.15s, box-shadow 1s;
-}
-@media (min-width: 1024px) {
-  .header {
-    height: 15vh;
-  }
 }
 .header.hero-header::after {
   background: transparent;
@@ -697,12 +690,12 @@ hamburger
   justify-content: space-between;
   width: 100%;
   height: 100%;
-  padding: 0 5vw;
+  padding: 1rem 5vw;
   z-index: 5;
 }
 @media (max-width: 450px) {
   .header .navbar #nav {
-    padding: 0 1rem;
+    padding: 0.5rem 5vw;
   }
 }
 .header .navbar #nav .logo {
@@ -711,27 +704,21 @@ hamburger
   transition: 1s;
 }
 .header .navbar #nav .logo p {
-  font-size: 1rem;
-  font-family: "Kanit", sans-serif;
-  font-weight: 400;
-  text-transform: capitalize;
-  color: #f4f4f4;
   background-color: #15191e;
+  color: #f4f4f4;
   border: 1px solid rgba(179, 191, 203, 0.5);
   padding-left: 0.25rem;
   padding-block: 0.15rem;
+  font-family: "Kanit", sans-serif;
+  font-size: 1rem;
+  font-weight: 400;
+  text-transform: capitalize;
   border-radius: 0.25rem;
   overflow: hidden;
   transition: 0.5s;
 }
-@media (min-width: 768px) {
-  .header .navbar #nav .logo p {
-    font-size: 1.25rem;
-  }
-}
 .header .navbar #nav .logo p span {
   padding-right: 0.25rem;
-  background: linear-gradient(0deg, #deb86e, #ead2a1);
   background: linear-gradient(#f4f4f4, #fff);
   background: inherit;
   color: #b3c0cc;
@@ -954,6 +941,7 @@ hamburger
 }
 @media (min-width: 820px) {
   .header .navbar #nav .nav-list {
+    padding: 1rem 0;
     height: 100%;
   }
   .header .navbar #nav .nav-list .nav-logo {
