--- a/sass/_utilities.scss
+++ b/sass/_utilities.scss
@@ -11,7 +11,7 @@ hamburger
     font-size: 10px;
     height: 3em;
     width: 3em;
-    margin: .5rem auto .5rem;
+    // margin: .5rem auto .5rem;
     display: inline-block;
     border-radius: 50%;
     position: relative;
