--- a/css/style.css
+++ b/css/style.css
@@ -1166,7 +1166,7 @@ hamburger
 .banner .hero .hero-content .hero-title .hero-title-header {
   line-height: 1.25;
   font-size: 0.95rem;
-  font-size: clamp(.95rem, 2vw, 1.125rem);
+  font-size: clamp(.95rem, 2vw, 1rem);
   font-weight: 400;
   color: #b3c0cc;
 }
@@ -1921,13 +1921,13 @@ hamburger
   background: #fff;
 }
 .skills-section .skills-content .skills-intro {
-  padding: 0 2.5vw 0 5vw;
+  padding: 0 2.5vw 5vh 5vw;
   position: relative;
   z-index: 30;
 }
 @media (min-width: 576px) {
   .skills-section .skills-content .skills-intro {
-    padding: 0vh 5vw;
+    padding: 0vh 5vw 5vh;
   }
 }
 @media (min-width: 768px) {
@@ -1936,8 +1936,8 @@ hamburger
   }
 }
 .skills-section .skills-content .skills-intro .skills-article p {
+  font-size: clamp(.95rem, 2vw, 1rem);
   font-size: 0.95rem;
-  font-size: clamp(.95rem, 2vw, 1.125rem);
   font-weight: 500;
   line-height: 1.6;
   overflow: hidden;
@@ -1990,7 +1990,7 @@ hamburger
   text-align: left;
   color: #ead2a1;
   font-size: 1rem;
-  font-size: clamp(.95rem, 2vw, 1.125rem);
+  font-size: clamp(.95rem, 2vw, 1rem);
 }
 .skills-section .skills-content .skills-intro .skills-drop .skills-drop-p {
   font-weight: 500;
@@ -2388,7 +2388,6 @@ hamburger
 }
 
 .skill-section-container {
-  margin-top: 10vh;
   position: relative;
 }
 @media (min-width: 768px) {
@@ -2432,8 +2431,6 @@ hamburger
   position: relative;
   isolation: isolate;
   height: 85vh;
-  background: #29323d;
-  background: linear-gradient(140deg, yellow 40%, red);
   background: linear-gradient(140deg, #15191e 40%, transparent);
 }
 @media (min-width: 820px) {
@@ -2487,6 +2484,8 @@ hamburger
   width: 10rem;
   width: clamp(10rem, 40vw, 12rem);
   font-weight: 600;
+  position: sticky;
+  top: 50vh;
 }
 .skill-section .skill-section-title img {
   position: absolute;
