--- a/sass/_skills.scss
+++ b/sass/_skills.scss
@@ -1,4 +1,4 @@
-// skills
+// SKILLS SECTION
 .skills-section {
     // border: 3px solid red;
     padding: 10vh 0 0;
@@ -17,13 +17,13 @@
         // SKILLS INTRO
         .skills-intro {
             // border: 2px solid red;
-            padding: 0 2.5vw 0 5vw;
+            padding: 0 2.5vw 5vh 5vw;
             // padding: 1rem;
             position: relative;
             z-index: 30;
 
             @include sm {
-                padding: 0vh 5vw;
+                padding: 0vh 5vw 5vh;
             }
 
             .skills-article {
@@ -33,8 +33,8 @@
 
                 p {
                     // font-size: clamp(.95rem, 1.5vw, 1.15rem);
-                    font-size: .95rem;
                     font-size: $font-clamp-sm;
+                    font-size: .95rem;
                     font-weight: 500;
                     line-height: 1.6;
                     overflow: hidden;
@@ -694,9 +694,10 @@
     }
 }
 
+// SKILLS DISPLAY SECTION CONTAINER
 .skill-section-container {
     // border: 2px solid purple;
-    margin-top: 10vh;
+    // margin-top: 10vh;
     position: relative;
 
     @include md {
@@ -752,8 +753,6 @@
         position: relative;
         isolation: isolate;
         height: 85vh;
-        background: $overlay-blue-dark;
-        background: linear-gradient(140deg, yellow 40%, red);
         background: linear-gradient(140deg, $overlay-blue-darkest 40%, transparent);
 
         @include lg {
@@ -818,8 +817,8 @@
             width: clamp(10rem, 40vw, 12rem);
             font-weight: 600;
 
-            // position: sticky;
-            // top: 50vh;
+            position: sticky;
+            top: 50vh;
 
         }
 
