--- a/sass/_skills.scss
+++ b/sass/_skills.scss
@@ -808,13 +808,29 @@
             // border: 2px solid red;
             margin-top: 1rem;
             padding: 0 1rem;
+            display: flex;
+            justify-content: space-evenly;
+            list-style: none;
 
             li {
-                padding-bottom: .25rem;
+                // padding-bottom: .25rem;
+                padding: .25rem 1rem;
 
                 &::marker {
                     color: $brand;
                 }
+                border: 2px solid transparent;
+                border-right-color: $brand;
+                border-left-color: $brand;
+                text-transform: capitalize;
+
+                &:first-child {
+                    border-color: transparent;
+                }
+                &:last-child {
+                    border-color: transparent;
+                }
+
             }
         }
 
@@ -823,6 +839,8 @@
             width: 12rem;
             width: clamp(12rem, 10vw, 12rem);
             font-weight: 600;
+            position: absolute;
+            bottom: 10vh;
 
             // position: sticky;
             // top: 50vh;
@@ -1017,10 +1035,12 @@
                     font-weight: bold;
                     font-size: 1.25rem;
                 }
+                
             }
 
             ul {
                 margin-top: 1rem;
+                display: flex;
 
                 li {
                     padding-bottom: .25rem;
